# weeker_raytracer

./: .gitignore  CMakeLists.txt  Makefile  PROGRESS.md  README.md
InOneWeekend/: Makefile  PROGRESS.md
InOneWeekend/src/: material.h  sphere.h
RestOfLife/: .gitignore  Makefile  README.md
RestOfLife/src/: hittable_list.h  material.h  pdf.h  program.cpp  xx1.cpp  xx5.cpp  xx7b.cpp
TheNextWeek/src/: aarect.h  box.h  constant_medium.h  hittable.h  hittable_list.h  material.h  perlin.h  program.cpp
cmake/: configure_optix.cmake
notes/: TODO.org
notes/cuda/: .gitignore  FIRST_CUDA.md  NSIGHT_COMPUTE.md  add.cu  add_block.cu  add_grid.cu  add_grid_init.cu
notes/drivers/: install-ppa.md
notes/engines/: list_open_safari_tabs.applescript
notes/optix/: examples.md  install.md  optix7course.md
output/: .gitignore
src/: CMakeLists.txt  camera.h  hittable.h  material.h  moving_sphere.h  perlin.h  program.cpp  ray.h  sphere.h  stb_image.h  texture.h
src/CMake/: configure_optix.cmake
src/Cpp/: CMakeLists.txt
src/Cpp/InOneWeekend/: hittable_list.h  material.h
src/Cpp/RestOfLife/: bvh.h  material.h  pdf.h
src/Cpp/RestOfLife/src/: xx2.cpp  xx3.cpp  xx5a.cpp  xx5b.cpp  xx6.cpp  xx7c.cpp
src/Cpp/TheNextWeek/: .gitignore  README.md  constant_medium.h  hittable_list.h  material.h
src/Cpp/common/: camera.h  ray.h  rtweekend.h  vec3.h
src/Cuda/: CMakeLists.txt
src/Cuda/Attic/: bvh.cuh
src/Cuda/InOneWeekend/: camera.cuh  hittable.cuh
src/Cuda/TheNextWeek/: hittable_list.cuh  material.cuh
src/Cuda/commonCuda/: aabb.cuh  rtweekend.cuh
src/InOneWeekend/: hittable.h  hittable_list.h  main.cc  random.h  sphere.h
src/InOneWeekend/src/: camera.h  hittable.h  hittable_list.h
src/InOneWeekendCuda/: hittable.h  hittable_list.cuh  hittable_list.h  main.cu  material.cuh  material.h  sphere.cuh  sphere.h
src/InOneWeekendOptix/: hittable.cuh  main.cu  material.cuh
src/OptiX/InOneWeekend/: CMakeLists.txt  camera.cuh  drawColor.cu  introOptix.cpp  introOptix.h  main.cpp  material.cu  miss.cu  raydata.cuh  raygen.cu  sphere.cu
src/OptiX/InOneWeekend/basics/: drawColorGradient.cu  main.cpp  main2.cpp
src/OptiX/InOneWeekend/geometry/: ioGeometry.h  ioSphere.h  sphere.cu
src/OptiX/InOneWeekend/material/: dielectricMaterial.cu  ioDielectricMaterial.h  ioLambertianMaterial.h  ioMaterial.h  ioMetalMaterial.h  ioNormalMaterial.h  lambertianMaterial.cu  material.cu  normalMaterial.cu
src/OptiX/InOneWeekend/miss/: miss.cu
src/OptiX/InOneWeekend/raygen/: raygen.cu
src/OptiX/InOneWeekend/scene/: ioCamera.h  ioScene.h
src/OptiX/OptixGui/: .editorconfig  CMakeLists.txt  Director.cpp  InputParser.h  README.md  conanfile.txt  main.cpp
src/OptiX/OptixGui/geometry/: ioGroup.h
src/OptiX/OptixGui/lib/: onb.cuh  raydata.cuh  sampling.cuh
src/OptiX/OptixGui/material/: lambertianMaterial.cu  material.cuh  normalMaterial.cu
src/OptiX/OptixGui/pdf/: cosinePdf.cu  ioPdf.h  mixturePdf.cu  pdf.cuh
src/OptiX/OptixGui/scene/: camera.cuh  ioScene.h
src/OptiX/OptixGui/scene/.Archive/: ioScene6CornellBox.h
src/OptiX/OptixGui/texture/: checkeredTexture.cu  constantTexture.cu
src/OptiX/RestOfLife/: CMakeLists.txt  Director.cpp  Director.h
src/OptiX/RestOfLife/geometry/: aarect.cu  ioAARect.h  ioGeometryGroup.h  sphere.cu
src/OptiX/RestOfLife/lib/: onb.cuh  raydata.cuh  sampling.cuh  vector_utils.cuh
src/OptiX/RestOfLife/material/: dielectricMaterial.cu  diffuseLight.cu  ioDielectricMaterial.h  ioDiffuseLightMaterial.h  ioMetalMaterial.h  isotropicMaterial.cu  lambertianMaterial.cu  material.cuh  metalMaterial.cu  normalMaterial.cu
src/OptiX/RestOfLife/pdf/: ioPdf.h  mixtureBiasPdf.cu  rectPdf.cu
src/OptiX/RestOfLife/raygen/: miss.cu  raygen.cu
src/OptiX/RestOfLife/scene/: ioScene.h
src/OptiX/RestOfLife/scene/.Archive/: ioScene2.h  ioScene2texture2.h
src/OptiX/RestOfLife/texture/: noiseTexture.cu  nullTexture.cu
src/OptiX/TheNextWeek/: CMakeLists.txt  Director.cpp  Director.h  callableprog.cuh  camera.cuh  main.cpp  raydata.cuh  sampling.cuh
src/OptiX/TheNextWeek/geometry/: aabox.cu  aarect.cu  ioAABox.h  ioAARect.h  ioGeometryGroup.h  ioGeometryInstance.h  ioGroup.h  ioMovingSphere.h  ioSphere.h  ioTransform.h  ioVolumeBox.h  ioVolumeSphere.h  movingSphere.cu  moving_sphere.cu  sphere.cu  volumeBox.cu  volumeSphere.cu
src/OptiX/TheNextWeek/lib/: random.cuh  raydata.cuh  sampling.cuh
src/OptiX/TheNextWeek/material/: dielectricMaterial.cu  diffuseLight.cu  ioDielectricMaterial.h  ioIsotropicMaterial.h  ioLambertianMaterial.h  ioMaterial.h  ioMetalMaterial.h  ioNormalMaterial.h  isotropicMaterial.cu  lambertianMaterial.cu  metalMaterial.cu  normalMaterial.cu
src/OptiX/TheNextWeek/miss/: miss.cu
src/OptiX/TheNextWeek/raygen/: raygen.cu
src/OptiX/TheNextWeek/scene/: ioCamera.h  ioScene.h  ioScene2.h  ioScene2moving.h  ioScene2texture.h  ioScene2texture2.h  ioScene4.h  ioScene5.h  ioScene6CornellBox.h
src/OptiX/TheNextWeek/scene/.Archive/: ioScene2moving.h  ioScene2texture.h  ioScene3.h  ioScene4.h
src/OptiX/TheNextWeek/texture/: checkeredTexture.cu  constantTexture.cu  imageTexture.cu  ioTexture.h  noiseTexture.cu  texture.cuh
src/RestOfLife/: README.md  aarect.h  bvh.h  hittable.h  hittable_list.h  main.cc  material.h  onb.h  pdf.h  sphere.h
src/RestOfLife/src/: aabb.h  aarect.h  box.h  moving_sphere.h  onb.h  sphere.h  xx4.cpp  xx7.cpp  xx7d.cpp
src/TheNextWeek/: Makefile  aarect.h  box.h  hittable.h  main.cc  moving_sphere.h  sphere.h  surface_texture.h
src/TheNextWeek/src/: hittable.h  material.h  program.cpp
src/TheNextWeekCuda/: hittable.cuh  main.cu  material.cuh  moving_sphere.cuh  sphere.cuh
src/common/: aabb.h  camera.h  perlin.h  texture.h
src/commonCuda/: aabb.cuh  camera.cuh  camera.h  ray.cuh  ray.h  rtweekend.h  texture.cuh  vec3.cuh  vec3.h
src/commonOptix/: camera.cuh  ray.cuh  rtweekend.cuh
